Made project windows-proof (#1746)
* Fixed Windows issues with default charset

* Added coverage.json to gitignore

* Made project Windows-proof

* Reverted unnecessary changes

* Reverted .sh changes

* Revert "Added coverage.json to gitignore"

This reverts commit fa842330c2d2fb41955385b41fab4601571b37e9.

* Reverted coverage changes

* Bumped DSL and bundle version

* Update DSL version to 4.44.2 and bundle version to 3.16.0

* Fixed scheme-importer

* Reverted namespace-hierarchy.json changes

Co-authored-by: hugohills <hugohills@hotmail.com>
Co-authored-by: Hugo Hills <39260692+hugohills-regnosys@users.noreply.github.com>